--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 											<input type="text" name="name" id="name" />
 										</div>
 										<div class="field half">
-											<label for="email"><a href="mailto:lkizunal@gmail.com" Email</a></label>
+											<label for="email">Email</label>
 											<input type="text" name="email" id="email" />
 										</div>
 										<div class="field">
@@ -87,10 +87,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/yourejustmytype" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://facebook.com/jennpanda" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://instagram.com/thenotsosnowylife" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/cupcakezzz" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
@@ -152,10 +152,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://twitter.com/yourejustmytype" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://facebook.com/jennpanda" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://instagram.com/thenotsosnowylife" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://github.com/cupcakezzz" class="icon fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
