--- a/index.html
+++ b/index.html
@@ -65,28 +65,10 @@
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+								<h2 class="major">Contact me!</h2>
+								<p>There are many ways to contact me, choose your option below.<br>P.S. My instagram page is mainly for my dog. :)</p>
 								<ul class="icons">
+									<li><a href="mailto:lkizunal@gmail.com" class="icon fa-email"><span class="label">E-mail</span></a></li>
 									<li><a href="https://twitter.com/yourejustmytype" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://facebook.com/jennpanda" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://instagram.com/thenotsosnowylife" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
