--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								<h2 class="major">Contact me!</h2>
 								<p>There are many ways to contact me, choose your option below.<br>P.S. My instagram page is mainly for my dog. :)</p>
 								<ul class="icons">
-									<li><a href="mailto:lkizunal@gmail.com" class="icon fa-mail-reply"><span class="label">E-mail</span></a></li>
+									<li><a href="mailto:lkizunal@gmail.com" class="icon fa-envelope-o"><span class="label">E-mail</span></a></li>
 									<li><a href="https://twitter.com/yourejustmytype" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://facebook.com/jennpanda" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://instagram.com/thenotsosnowylife" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
@@ -134,7 +134,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="mailto:lkizunal@gmail.com" class="icon fa-mail-reply"><span class="label">E-mail</span></a></li>
+										<li><a href="mailto:lkizunal@gmail.com" class="icon fa-envelope-o"><span class="label">E-mail</span></a></li>
 										<li><a href="https://twitter.com/yourejustmytype" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://facebook.com/jennpanda" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 										<li><a href="https://instagram.com/thenotsosnowylife" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
