--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	<script>
+		alert('Welcome to my page!');
+	</script>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
